--- a/lab-css-spotify-clone/index.html
+++ b/lab-css-spotify-clone/index.html
@@ -23,12 +23,44 @@
       <p>Listen to the right music, wherever you are.</p>
     </figcaption>
 </figure>  
-
-       What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
+<div class="box2">
+      <h2 class="tituloBox2">What’s on Spotify?</h2>
+      <div class="lineBox2">
+        <span class="minibox 1">
+          <img src="./images/music-icon.png" alt="som1"/>  
+          <h3>Millions of Songs</h3> 
+          <p>There are millions of songs on Spotify</p>
+        </span>
+        <span class="minibox 2">
+          <img src="./images/high-quality-icon.png" alt="som2"/> 
+          <h3>HD Music</h3>
+          <p> Listen to music as if you were listening live</p>
+        </span>
+        <span class="minibox 3">
+          <img src="./images/devices-icon.png" alt="som3"/> 
+          <h3>Stream Everywhere</h3> 
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </span> 
+      </div>
+  </div>
+  <div class='box3'>
+    <span class='colum one'> 
+    <h2>It’s as yeezy as Kanye West.</h2>
+    <h3>Search</h3>
+    Know what you want to listen to? Just search and hit play.
+    <h3>Browse</h3>
+    Check out the latest charts, brand new releases and great playlists for right now. 
+    <h3>Discover</h3>
+    Enjoy new music every Monday with your
     own personal playlist. Or sit back and enjoy Radio.
+    </span>
+    <span class='colum two'>
+      <img src="./images/spotify-icon-white.png" alt="icon White" class='icon'> 
+    </span>
+    <span class='colum three'>
+      <img src="./images/spotify-app.jpg" alt="app" class='app'> 
+    </span>  
+  </div>  
   </div>
 </body>
 </html>
